--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
     </head>
 
 
