--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
     </div>
    </div>    
   </div>
+  <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+          <div class="container">
+            <div>
+                <h3 class="text-center">Your Local Weather</h3>
+                <p class="credit text-center align-bottom">By:<a href="http://www.allentowngroup.com/about-robert-allen/" target="_blank"> Robert Allen</a></p></div>
+          </div>
+        </nav>
 </div>    
 </body>
 </html>      
