--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" >
         <meta name="viewport" content="width=device-width, initial-scale=1" >
-        <meta name="description" content="Weather API"     />
-        <meta name="title" content="Weather"     />
+        <meta name="description" content="Your Local Weather"  />
+        <meta name="title" content="Weather API"     />
         <meta name="url" content="http://www.allentowngroup.com/weather-app/"   />
-        <meta name="og:image" content="img/ra-logo40"   />
+        <meta name="og:image" content="img/og-weather.png"  />
         <meta name="author" content="Robert Allen"      />
 
         
