--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Your Local Weather"  />
         <meta name="title" content="Weather API"     />
         <meta name="url" content="http://www.allentowngroup.com/weather-app/"   />
-        <meta name="og:image" content="img/og-weather.png"  />
+        <meta name="og:image" content="images/og-weather.png"  />
         <meta name="author" content="Robert Allen"      />
 
         
